<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmw_test_fixture_implementation</name>
  <version>0.14.4</version>
  <description>Tools for isolating ROS environments at the RMW layer</description>

  <maintainer email="brandon@openrobotics.org">Brandon Ong</maintainer>

  <license>Apache License 2.0</license>

  <author email="logans@cottsay.net">Scott K Logan</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros_core</buildtool_depend>

  <build_depend>python3-dev</build_depend>
  <build_depend>rmw_implementation</build_depend>
  <build_depend>rmw_implementation_cmake</build_depend>

  <!-- Explicit group resolution - see ros-infrastructure/catkin_pkg#369 -->
  <exec_depend condition="$DISABLE_GROUPS_WORKAROUND != 1">rmw_zenoh_cpp</exec_depend>

  <exec_depend>rpyutils</exec_depend>

  <depend>rcpputils</depend>
  <depend>rcutils</depend>
  <depend>rmw</depend>
  <depend>rmw_test_fixture</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <group_depend>rmw_test_fixture_implementation_packages</group_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
